--- a/index.html
+++ b/index.html
@@ -112,7 +112,6 @@
           <ul>
             <li>Lunes a jueves: 8:30 a 16:00 hrs.</li>
             <li>Viernes: 8:30 a 15:00 hrs.</li>
-            <li><strong>Horario de colación:</strong> 13:00 a 14:00 hrs.</li>
             <li>⚠️ Censo cerrado el último día del mes.</li>
             <li><em>Vacunatorio disponible para esquema nacional y campañas vigentes. Traiga carnet de vacunas del menor o cédula de identidad.</em></li>
           </ul>
@@ -124,6 +123,7 @@
             <li>📞 <strong>Sector Verde:</strong> <a href="tel:+56968282933">+56 9 6828 2933</a></li>
             <li>📞 <strong>Sector Azul:</strong> <a href="tel:+56964879380">+56 9 6487 9380</a></li>
             <li>📞 <strong>Sector Amarillo:</strong> <a href="tel:+5693467665">+56 9 346 7665</a></li>
+            <li>📞 <strong>Sector Rojo:</strong> <a href="tel:+56964880911">+56 9 64880911</a></li>
             <li>📞 <strong>OIRS:</strong> <a href="tel:+5697024805">+56 9 702 4805</a></li>
           </ul>
           <p style="margin-top:8px"><em>Puede comunicarse con su sector para obtener información o realizar consultas.</em></p>
