--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
             <a href="tel:+56968282933">Llamar Sector Verde</a>
             <a href="tel:+56964879380">Llamar Sector Azul</a>
             <a href="tel:+5693467665">Llamar Sector Amarillo</a>
+             <a href="tel:+56964880911">Llamar Sector Rojo</a>
             <a href="tel:+5697024805">Llamar OIRS</a>
           </div>
         </article>
