--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
             <a href="tel:+5693467665">Llamar Sector Amarillo</a>
              <a href="tel:+56964880911">Llamar Sector Rojo</a>
             <a href="tel:+5697024805">Llamar OIRS</a>
+            
+           Los telefonos pueden presetar intermitencia estamos mejorando nuestros canales de atención.
           </div>
         </article>
 
