--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
              <a href="tel:+56964880911">Llamar Sector Rojo</a>
             <a href="tel:+5697024805">Llamar OIRS</a>
             
-           Los telefonos pueden presetar intermitencia estamos mejorando nuestros canales de atención.
-          </div>
+           
+          </div> Los telefonos pueden presetar intermitencia estamos mejorando nuestros canales de atención.
         </article>
 
         <article class="card" style="--delay:.45s">
