--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <a href="tel:+5697024805">Llamar OIRS</a>
             
            
-          </div> Los telefonos pueden presetar intermitencia estamos mejorando nuestros canales de atención.
+          </div> Los telefonos pueden presentar intermitencia estamos mejorando nuestros canales de atención.
         </article>
 
         <article class="card" style="--delay:.45s">
@@ -164,5 +164,29 @@
   </div>
 </body>
 </html>
+<section style="max-width: 800px; margin: auto; padding: 20px; text-align: center;">
+  <h2 style="color: #0b5ed7;">Actualiza tus datos de contacto</h2>
+  
+  <p style="font-size: 18px;">
+    Mantener tus datos actualizados nos permite brindarte una mejor atención y contactarte oportunamente.
+  </p>
+  
+  <p>
+    Si has cambiado tu dirección o número telefónico, completa el siguiente formulario. 
+    El proceso es rápido y no toma más de un minuto.
+  </p>
+
+  <p style="font-size: 14px; color: gray;">
+    Tus datos serán utilizados únicamente para fines de atención y gestión del CESFAM.
+  </p>
+</section>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfIejCIpD09RXO5nBY-Vv1ENASJSfAWzRXdGwpItIHx4tECuA/viewform?embedded=true" 
+width="100%" 
+height="1200" 
+frameborder="0">
+Cargando…
+</iframe>
+
+
 
 
