--- a/index.html
+++ b/index.html
@@ -155,16 +155,7 @@
           <p style="margin-top:8px; font-size:12px; opacity:.7">Enlace oficial MINSAL: oirs.minsal.cl</p>
         </article>
 
-      </div>
-      <div class="sep"></div>
-      <footer>
-        <p>Información actualizada – Octubre 2025 • Diseño institucional</p>
-      </footer>
-    </main>
-  </div>
-</body>
-</html>
-<section style="max-width: 800px; margin: auto; padding: 20px; text-align: center;">
+     <section style="max-width: 800px; margin: auto; padding: 30px; text-align: center;">
   <h2 style="color: #0b5ed7;">Actualiza tus datos de contacto</h2>
   
   <p style="font-size: 18px;">
@@ -172,21 +163,17 @@
   </p>
   
   <p>
-    Si has cambiado tu dirección o número telefónico, completa el siguiente formulario. 
-    El proceso es rápido y no toma más de un minuto.
+    Si has cambiado tu dirección o número telefónico, completa el formulario en línea. 
+    Solo toma un minuto.
   </p>
 
-  <p style="font-size: 14px; color: gray;">
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSfIejCIpD09RXO5nBY-Vv1ENASJSfAWzRXdGwpItIHx4tECuA/viewform" 
+     target="_blank"
+     style="display: inline-block; margin-top: 15px; padding: 12px 25px; background-color: #0b5ed7; color: white; text-decoration: none; font-size: 18px; border-radius: 8px;">
+     Completar formulario
+  </a>
+
+  <p style="font-size: 14px; color: gray; margin-top: 15px;">
     Tus datos serán utilizados únicamente para fines de atención y gestión del CESFAM.
   </p>
 </section>
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfIejCIpD09RXO5nBY-Vv1ENASJSfAWzRXdGwpItIHx4tECuA/viewform?embedded=true" 
-width="100%" 
-height="1200" 
-frameborder="0">
-Cargando…
-</iframe>
-
-
-
-
