--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@
      <section style="max-width: 800px; margin: auto; padding: 30px; text-align: center;">
   <h2 style="color: #0b5ed7;">Actualiza tus datos de contacto</h2>
   
+<section style="max-width: 800px; margin: auto; padding: 30px; text-align: center;">
+  <h2 style="color: #0b5ed7;">Actualiza tus datos de contacto</h2>
+  
   <p style="font-size: 18px;">
     Mantener tus datos actualizados nos permite brindarte una mejor atención y contactarte oportunamente.
   </p>
