--- a/index.html
+++ b/index.html
@@ -155,28 +155,45 @@
           <p style="margin-top:8px; font-size:12px; opacity:.7">Enlace oficial MINSAL: oirs.minsal.cl</p>
         </article>
 
-     <section style="max-width: 800px; margin: auto; padding: 30px; text-align: center;">
-  <h2 style="color: #0b5ed7;">Actualiza tus datos de contacto</h2>
-  
-<section style="max-width: 800px; margin: auto; padding: 30px; text-align: center;">
-  <h2 style="color: #0b5ed7;">Actualiza tus datos de contacto</h2>
-  
-  <p style="font-size: 18px;">
+    <section style="
+  background-image: url('https://cdn-icons-png.flaticon.com/512/2991/2991148.png');
+  background-repeat: no-repeat;
+  background-position: right bottom;
+  background-size: 120px;
+  background-color: #e9f2ff;
+  padding: 40px 20px;
+  border-radius: 12px;
+  max-width: 900px;
+  margin: 30px auto;
+">
+
+  <h2 style="color: #0b5ed7; margin-bottom: 10px;">
+    Actualiza tus datos de contacto
+  </h2>
+
+  <p style="font-size: 18px; max-width: 600px;">
     Mantener tus datos actualizados nos permite brindarte una mejor atención y contactarte oportunamente.
   </p>
-  
-  <p>
-    Si has cambiado tu dirección o número telefónico, completa el formulario en línea. 
+
+  <p style="max-width: 600px;">
+    Si has cambiado tu dirección o número telefónico, completa el formulario en línea.
     Solo toma un minuto.
   </p>
 
-  <a href="https://docs.google.com/forms/d/e/1FAIpQLSfIejCIpD09RXO5nBY-Vv1ENASJSfAWzRXdGwpItIHx4tECuA/viewform" 
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSfIejCIpD09RXO5nBY-Vv1ENASJSfAWzRXdGwpItIHx4tECuA/viewform"
      target="_blank"
-     style="display: inline-block; margin-top: 15px; padding: 12px 25px; background-color: #0b5ed7; color: white; text-decoration: none; font-size: 18px; border-radius: 8px;">
+     style="
+       display: inline-block;
+       margin-top: 15px;
+       padding: 12px 25px;
+       background-color: #0b5ed7;
+       color: white;
+       text-decoration: none;
+       font-size: 18px;
+       border-radius: 8px;
+       font-weight: bold;
+     ">
      Completar formulario
   </a>
 
-  <p style="font-size: 14px; color: gray; margin-top: 15px;">
-    Tus datos serán utilizados únicamente para fines de atención y gestión del CESFAM.
-  </p>
 </section>
