--- a/index.html
+++ b/index.html
@@ -166,33 +166,70 @@
   margin: 30px auto;
 ">
 
-  <h2 style="color: #0b5ed7; margin-bottom: 10px;">
-    Actualiza tus datos de contacto
-  </h2>
+ <section style="
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  background: linear-gradient(135deg, #f3ecff 0%, #ffffff 100%);
+  padding: 60px 30px;
+  border-radius: 20px;
+  margin: 50px 0;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+">
 
-  <p style="font-size: 18px; max-width: 600px;">
-    Mantener tus datos actualizados nos permite brindarte una mejor atención y contactarte oportunamente.
-  </p>
+  <!-- BLOQUE TEXTO -->
+  <div style="flex: 1; min-width: 280px; padding-right: 20px;">
 
-  <p style="max-width: 600px;">
-    Si has cambiado tu dirección o número telefónico, completa el formulario en línea.
-    Solo toma un minuto.
-  </p>
+    <h1 style="
+      font-size: 48px;
+      font-weight: 800;
+      color: #5b2ca1;
+      margin-bottom: 20px;
+      line-height: 1.1;
+    ">
+      ACTUALIZA <br> TUS DATOS
+    </h1>
 
-  <a href="https://docs.google.com/forms/d/e/1FAIpQLSfIejCIpD09RXO5nBY-Vv1ENASJSfAWzRXdGwpItIHx4tECuA/viewform"
-     target="_blank"
-     style="
-       display: inline-block;
-       margin-top: 15px;
-       padding: 12px 25px;
-       background-color: #0b5ed7;
-       color: white;
-       text-decoration: none;
-       font-size: 18px;
-       border-radius: 8px;
-       font-weight: bold;
-     ">
-     Completar formulario
-  </a>
+    <p style="
+      font-size: 18px;
+      color: #2e7d6b;
+      max-width: 550px;
+      margin-bottom: 30px;
+    ">
+      Si has cambiado de dirección o número de teléfono en los últimos seis meses,
+      te invitamos a actualizar tu información. Así podremos contactarte para
+      citaciones, cambios de hora, interconsultas o resultados de exámenes.
+    </p>
+
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfIejCIpD09RXO5nBY-Vv1ENASJSfAWzRXdGwpItIHx4tECuA/viewform"
+       target="_blank"
+       style="
+         display: inline-block;
+         background: linear-gradient(90deg, #5b2ca1, #7b3fd6);
+         color: white;
+         padding: 15px 35px;
+         border-radius: 40px;
+         text-decoration: none;
+         font-weight: 600;
+         font-size: 16px;
+         transition: 0.3s ease;
+       "
+       onmouseover="this.style.transform='scale(1.05)'"
+       onmouseout="this.style.transform='scale(1)'"
+    >
+       ACTUALIZAR MIS DATOS
+    </a>
+
+  </div>
+
+  <!-- BLOQUE IMAGEN -->
+  <div style="flex: 1; min-width: 280px; text-align: center; margin-top: 20px;">
+    <img src="https://cdn-icons-png.flaticon.com/512/1048/1048953.png"
+         alt="Actualizar datos"
+         style="max-width: 320px; width: 100%; border-radius: 20px;">
+  </div>
+
+</section>
 
 </section>
