--- a/index.html
+++ b/index.html
@@ -154,82 +154,40 @@
           </div>
           <p style="margin-top:8px; font-size:12px; opacity:.7">Enlace oficial MINSAL: oirs.minsal.cl</p>
         </article>
-<section style="
-  background-image: url('https://cdn-icons-png.flaticon.com/512/2991/2991148.png');
-  background-repeat: no-repeat;
-  background-position: right bottom;
-  background-size: 120px;
-  background-color: #e9f2ff;
-  padding: 40px 20px;
-  border-radius: 12px;
-  max-width: 900px;
-  margin: 30px auto;
-">
+<!-- ===== BANNER FINAL ACTUALIZA DATOS ===== -->
+<div style="width:100%; display:flex; justify-content:center; margin:60px 0 20px 0; padding:0 16px;">
+  <div style="position:relative; width:min(1100px, 100%);">
 
- <section style="
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-  background: linear-gradient(135deg, #f3ecff 0%, #ffffff 100%);
-  padding: 60px 30px;
-  border-radius: 20px;
-  margin: 50px 0;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.08);
-">
-
-  <!-- BLOQUE TEXTO -->
-  <div style="flex: 1; min-width: 280px; padding-right: 20px;">
-
-    <h1 style="
-      font-size: 48px;
-      font-weight: 800;
-      color: #5b2ca1;
-      margin-bottom: 20px;
-      line-height: 1.1;
-    ">
-      ACTUALIZA <br> TUS DATOS
-    </h1>
-
-    <p style="
-      font-size: 18px;
-      color: #2e7d6b;
-      max-width: 550px;
-      margin-bottom: 30px;
-    ">
-      Si has cambiado de dirección o número de teléfono en los últimos seis meses,
-      te invitamos a actualizar tu información. Así podremos contactarte para
-      citaciones, cambios de hora, interconsultas o resultados de exámenes.
-    </p>
+    <img src="img/actualiza-datos.png"
+         alt="Actualiza tus datos"
+         style="
+           width:100%;
+           height:auto;
+           display:block;
+           border-radius:20px;
+           box-shadow:0 20px 50px rgba(0,0,0,0.35);
+         ">
 
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSfIejCIpD09RXO5nBY-Vv1ENASJSfAWzRXdGwpItIHx4tECuA/viewform"
        target="_blank"
        style="
-         display: inline-block;
-         background: linear-gradient(90deg, #5b2ca1, #7b3fd6);
-         color: white;
-         padding: 15px 35px;
-         border-radius: 40px;
-         text-decoration: none;
-         font-weight: 600;
-         font-size: 16px;
-         transition: 0.3s ease;
+         position:absolute;
+         left:7%;
+         bottom:12%;
+         background:linear-gradient(90deg,#5b2ca1,#7b3fd6);
+         color:#fff;
+         padding:14px 28px;
+         border-radius:999px;
+         font-weight:800;
+         text-decoration:none;
+         box-shadow:0 12px 22px rgba(91,44,161,0.35);
+         transition:all .2s ease;
        "
        onmouseover="this.style.transform='scale(1.05)'"
        onmouseout="this.style.transform='scale(1)'"
     >
-       ACTUALIZAR MIS DATOS
+      ACTUALIZAR MIS DATOS
     </a>
 
   </div>
-
-  <!-- BLOQUE IMAGEN -->
-  <div style="flex: 1; min-width: 280px; text-align: center; margin-top: 20px;">
-    <img src="https://cdn-icons-png.flaticon.com/512/1048/1048953.png"
-         alt="Actualizar datos"
-         style="max-width: 320px; width: 100%; border-radius: 20px;">
-  </div>
-
-</section>
-
-</section>
+</div>
