--- a/index.html
+++ b/index.html
@@ -6,295 +6,266 @@
 <title>CESFAM Raúl Sánchez Bañados – Información para la comunidad</title>
 
 <style>
-  :root {
-    --blue:#0f4c81;
-    --blue-2:#1c5f9a;
-    --light:#f6f9fc;
-    --card:#ffffff;
-    --accent:#19c1c1;
-  }
-  * { box-sizing: border-box; }
-  body {
-    margin:0; font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-    background: linear-gradient(180deg, var(--blue), var(--blue-2));
-    color:#fff;
-  }
-  .container { max-width: 900px; margin: 0 auto; padding: 16px; }
-  header { text-align:center; padding: 28px 12px 18px; }
-  header h1 { margin:6px 0 4px; font-size: clamp(22px,4.8vw,36px); letter-spacing:.3px; }
-  header p { opacity:.95; margin:0; font-size: clamp(14px,2.6vw,18px); }
+:root {
+  --blue:#0f4c81;
+  --blue-2:#1c5f9a;
+  --card:#ffffff;
+  --accent:#19c1c1;
+}
 
-  .welcome {
-    margin: 18px auto 26px;
-    background: rgba(255,255,255,.06);
-    border: 1px solid rgba(255,255,255,.12);
-    border-radius: 18px;
-    padding: 22px;
-    text-align:center;
-    box-shadow: 0 6px 20px rgba(0,0,0,.25);
-    animation: fadeIn .8s ease both;
-  }
-  .welcome h2 { margin: 6px 0 8px; font-size: clamp(20px,4.5vw,28px); }
-  .welcome p { margin: 0 0 14px; opacity:.95; }
+* { box-sizing: border-box; }
 
-  .btn {
-    background: #fff; color: var(--blue);
-    border: none; border-radius: 14px;
-    padding: 12px 18px; font-weight: 700;
-    cursor: pointer; transition: transform .1s ease, box-shadow .2s ease;
-    box-shadow: 0 6px 18px rgba(0,0,0,.22);
-  }
-  .btn:hover { transform: translateY(-1px); }
+body {
+  margin:0;
+  font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+  background: linear-gradient(180deg, var(--blue), var(--blue-2));
+  color:#fff;
+}
 
-  main { padding: 6px 0 40px; }
-  .grid { display:grid; gap:16px; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); }
+.container { max-width: 1000px; margin: 0 auto; padding: 16px; }
 
-  .card {
-    background: var(--card); color:#0b2542;
-    border-radius: 16px; padding: 18px;
-    box-shadow: 0 10px 24px rgba(0,0,0,.12);
-    transform: translateY(8px); opacity:0;
-    animation: slideUp .7s ease var(--delay,0s) forwards;
-  }
+header { text-align:center; padding: 28px 12px 18px; }
 
-  .card h3 { margin: 0 0 8px; display:flex; align-items:center; gap:10px; font-size: 18px; }
-  .pill { display:inline-block; background:#eef6ff; color:#0b2542; border-radius:999px; padding:2px 10px; font-size:12px; margin-left:8px; }
+header h1 {
+  margin:6px 0 4px;
+  font-size: clamp(24px,5vw,38px);
+}
 
-  ul { padding-left: 18px; margin: 8px 0 0; }
-  li { margin: 6px 0; }
+header p {
+  opacity:.95;
+  margin:0;
+  font-size: clamp(14px,2.6vw,18px);
+}
 
-  .cta-row { display:flex; flex-wrap:wrap; gap:10px; margin-top: 14px; }
-  .cta-row a {
-    text-decoration:none; background: var(--accent); color:#053c3c; font-weight:700;
-    padding:10px 12px; border-radius:12px; display:inline-flex; align-items:center; gap:8px;
-    box-shadow: 0 6px 18px rgba(0,0,0,.15);
-  }
+/* ===== HORARIOS PRINCIPALES ===== */
 
-  footer { text-align:center; opacity:.9; margin-top: 22px; }
-  footer a { color:#fff; font-weight: 700; }
+.main-schedule {
+  background: rgba(255,255,255,.08);
+  border: 1px solid rgba(255,255,255,.18);
+  padding: 22px;
+  border-radius: 18px;
+  margin: 20px 0 30px;
+  text-align: center;
+  box-shadow: 0 8px 24px rgba(0,0,0,.25);
+}
 
-  @keyframes fadeIn { from {opacity:0; transform: translateY(6px);} to {opacity:1; transform:none;} }
-  @keyframes slideUp { to { transform:none; opacity:1; } }
+.main-schedule h2 {
+  margin-bottom: 14px;
+  font-size: 22px;
+  font-weight: 800;
+}
 
-  .logo-bar { display:flex; justify-content:center; gap:14px; opacity:.95; font-weight:700; }
-  .logo-pill { background:rgba(255,255,255,.12); border:1px solid rgba(255,255,255,.25); padding:6px 10px; border-radius:999px; }
+.main-schedule p {
+  margin: 4px 0;
+  font-size: 16px;
+  opacity: .95;
+}
 
-  /* ===== BANNER PREMIUM ACTUALIZA DATOS ===== */
-  .update-banner-pro {
-    margin: 70px auto 10px;
-    padding: 50px 30px;
-    border-radius: 28px;
-    background: linear-gradient(135deg, #f3ecff 0%, #ffffff 60%, #e9fff7 100%);
-    box-shadow: 0 25px 60px rgba(0,0,0,.25);
-    overflow: hidden;
-  }
+/* ===== CARDS ===== */
 
-  .update-content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 40px;
-    flex-wrap: wrap;
-  }
+main { padding: 6px 0 40px; }
 
-  .update-text {
-    flex: 1;
-    min-width: 280px;
-  }
+.grid {
+  display:grid;
+  gap:16px;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+}
 
-  .update-schedule {
-    background: linear-gradient(90deg, #ffe9a8, #fff5d6);
-    color: #3a3a3a;
-    padding: 14px 18px;
-    border-radius: 14px;
-    font-size: 14px;
-    margin-bottom: 22px;
-    box-shadow: 0 6px 18px rgba(0,0,0,.08);
-  }
+.card {
+  background: var(--card);
+  color:#0b2542;
+  border-radius: 16px;
+  padding: 18px;
+  box-shadow: 0 10px 24px rgba(0,0,0,.12);
+}
 
-  .update-text h2 {
-    font-size: clamp(32px,5vw,56px);
-    font-weight: 900;
-    color: #6a2bbf;
-    margin-bottom: 18px;
-    line-height: 1.05;
-  }
+.card h3 { margin: 0 0 8px; }
 
-  .update-text p {
-    font-size: 18px;
-    color: #2e5d54;
-    margin-bottom: 30px;
-    max-width: 520px;
-  }
+ul { padding-left: 18px; margin: 8px 0 0; }
+li { margin: 6px 0; }
 
-  .update-btn {
-    display: inline-block;
-    background: linear-gradient(90deg, #6a2bbf, #8d52f2);
-    color: #fff;
-    padding: 16px 36px;
-    border-radius: 999px;
-    font-weight: 800;
-    text-decoration: none;
-    box-shadow: 0 14px 30px rgba(106,43,191,.35);
-    transition: all .2s ease;
-  }
+.cta-row {
+  display:flex;
+  flex-wrap:wrap;
+  gap:10px;
+  margin-top: 14px;
+}
 
-  .update-btn:hover { transform: scale(1.05); }
+.cta-row a {
+  text-decoration:none;
+  background: var(--accent);
+  color:#053c3c;
+  font-weight:700;
+  padding:10px 12px;
+  border-radius:12px;
+}
 
-  .update-image {
-    flex: 1;
-    min-width: 260px;
-    text-align: right;
-  }
+/* ===== BANNER ACTUALIZA DATOS ===== */
 
-  .update-image img {
-    width: 100%;
-    max-width: 420px;
-    filter: drop-shadow(0 30px 40px rgba(0,0,0,.25));
-  }
+.update-banner-pro {
+  margin: 70px auto;
+  padding: 50px 30px;
+  border-radius: 28px;
+  background: linear-gradient(135deg, #f3ecff 0%, #ffffff 60%, #e9fff7 100%);
+  box-shadow: 0 25px 60px rgba(0,0,0,.25);
+}
 
-  @media (max-width: 768px){
-    .update-image { text-align:center; }
-  }
+.update-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 40px;
+  flex-wrap: wrap;
+}
+
+.update-text {
+  flex: 1;
+  min-width: 280px;
+}
+
+.update-text h2 {
+  font-size: clamp(32px,5vw,56px);
+  font-weight: 900;
+  color: #6a2bbf;
+  margin-bottom: 18px;
+}
+
+.update-text p {
+  font-size: 18px;
+  color: #2e5d54;
+  margin-bottom: 30px;
+  max-width: 520px;
+}
+
+.update-btn {
+  display: inline-block;
+  background: linear-gradient(90deg, #6a2bbf, #8d52f2);
+  color: #fff;
+  padding: 16px 36px;
+  border-radius: 999px;
+  font-weight: 800;
+  text-decoration: none;
+  transition: .2s;
+}
+
+.update-btn:hover { transform: scale(1.05); }
+
+.update-image img {
+  width: 100%;
+  max-width: 420px;
+}
+
+/* ===== OIRS BANNER ===== */
+
+.oirs-banner {
+  margin: 50px 0;
+  display:flex;
+  justify-content:center;
+}
+
+.oirs-banner img {
+  width:100%;
+  max-width:1000px;
+  border-radius:20px;
+  box-shadow:0 25px 60px rgba(0,0,0,.35);
+  transition:.2s;
+}
+
+.oirs-banner img:hover { transform:scale(1.02); }
+
+/* ===== PORTAL PACIENTE ===== */
+
+.portal-banner {
+  margin: 50px 0;
+  display:flex;
+  justify-content:center;
+}
+
+.portal-banner img {
+  width:100%;
+  max-width:1000px;
+  border-radius:20px;
+  box-shadow:0 25px 60px rgba(0,0,0,.35);
+  transition:.2s;
+}
+
+.portal-banner img:hover { transform:scale(1.02); }
+
+footer { text-align:center; margin-top: 30px; opacity:.9; }
+
 </style>
 </head>
 
 <body>
-  <div class="container">
-    <div class="logo-bar" aria-label="Logo institucional">
-      <div class="logo-pill">CESFAM RAÚL SÁNCHEZ BAÑADOS</div>
+<div class="container">
+
+<header>
+  <h1>Bienvenidos al CESFAM Raúl Sánchez Bañados</h1>
+  <p>Aquí encontrarás horarios, teléfonos y servicios disponibles.</p>
+</header>
+
+<!-- ===== HORARIOS ===== -->
+<section class="main-schedule">
+  <h2>Horarios de Atención</h2>
+
+  <p><strong>Atención diurna:</strong></p>
+  <p>Lunes a jueves: 08:00 a 17:00 hrs</p>
+  <p>Viernes: 08:00 a 16:00 hrs</p>
+
+  <p><strong>Extensión horaria:</strong></p>
+  <p>Lunes a jueves: 17:00 a 20:00 hrs</p>
+  <p>Viernes: 16:00 a 20:00 hrs</p>
+
+  <p><strong>Sábados:</strong> 09:00 a 13:00 hrs</p>
+</section>
+
+<main>
+
+<!-- ===== ACTUALIZA DATOS ===== -->
+<section class="update-banner-pro">
+  <div class="update-content">
+
+    <div class="update-text">
+      <h2>ACTUALIZA<br>TUS DATOS</h2>
+      <p>
+        Si has cambiado de dirección o número de teléfono en los últimos seis meses,
+        te invitamos a actualizar tu información.
+      </p>
+
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfIejCIpD09RXO5nBY-Vv1ENASJSfAWzRXdGwpItIHx4tECuA/viewform"
+         target="_blank"
+         class="update-btn">
+         ACTUALIZAR MIS DATOS →
+      </a>
     </div>
 
-    <header>
-      <h1>Bienvenidos al CESFAM Raúl Sánchez Bañados</h1>
-      <p>Aquí encontrarás horarios, teléfonos y servicios disponibles.</p>
-    </header>
-
-    <section class="welcome">
-      <h2>Información para la comunidad</h2>
-      <p>Presiona el botón para ver la información completa.</p>
-      <button class="btn" onclick="document.getElementById('info').scrollIntoView({behavior:'smooth'})">Ver información</button>
-    </section>
-
-    <main id="info" aria-live="polite">
-      <div class="grid">
-
-        <article class="card" style="--delay:.05s">
-          <h3>💊 Farmacia <span class="pill">Horario</span></h3>
-          <ul>
-            <li>Lunes a viernes: 8:00 a 20:00 hrs. <em>(Tótem recibe hasta las 19:45 hrs.)</em></li>
-            <li>Sábado: 9:00 a 13:00 hrs.</li>
-          </ul>
-          <p style="margin-top:8px"><strong>Recuerde traer su cédula de identidad para retiro de medicamentos.</strong></p>
-        </article>
-
-        <article class="card" style="--delay:.15s">
-          <h3>🍼 PNAC <span class="pill">Horario</span></h3>
-          <ul>
-            <li>Lunes a viernes: 8:30 a 16:00 hrs.</li>
-            <li><strong>Horario de colación:</strong> 13:00 a 14:00 hrs.</li>
-            <li>⚠️ Censo cerrado el último día del mes.</li>
-            <li><em>Entrega de fórmulas y alimentos según indicación médica vigente.</em></li>
-          </ul>
-        </article>
-
-        <article class="card" style="--delay:.25s">
-          <h3>💉 Vacunas <span class="pill">Horario</span></h3>
-          <ul>
-            <li>Lunes a jueves: 8:30 a 16:00 hrs.</li>
-            <li>Viernes: 8:30 a 15:00 hrs.</li>
-            <li>⚠️ Censo cerrado el último día del mes.</li>
-            <li><em>Vacunatorio disponible para esquema nacional y campañas vigentes. Traiga carnet de vacunas del menor o cédula de identidad.</em></li>
-          </ul>
-        </article>
-
-        <article class="card" style="--delay:.35s">
-          <h3>☎️ Teléfonos de contacto</h3>
-          <ul>
-            <li>📞 <strong>Sector Verde:</strong> <a href="tel:+56968282933">+56 9 6828 2933</a></li>
-            <li>📞 <strong>Sector Azul:</strong> <a href="tel:+56964879380">+56 9 6487 9380</a></li>
-            <li>📞 <strong>Sector Amarillo:</strong> <a href="tel:+5693467665">+56 9 346 7665</a></li>
-            <li>📞 <strong>Sector Rojo:</strong> <a href="tel:+56964880911">+56 9 64880911</a></li>
-            <li>📞 <strong>OIRS:</strong> <a href="tel:+5697024805">+56 9 702 4805</a></li>
-          </ul>
-
-          <p style="margin-top:8px"><em>Puede comunicarse con su sector para obtener información o realizar consultas.</em></p>
-
-          <div class="cta-row">
-            <a href="tel:+56968282933">Llamar Sector Verde</a>
-            <a href="tel:+56964879380">Llamar Sector Azul</a>
-            <a href="tel:+5693467665">Llamar Sector Amarillo</a>
-            <a href="tel:+56964880911">Llamar Sector Rojo</a>
-            <a href="tel:+5697024805">Llamar OIRS</a>
-          </div>
-
-          <p style="margin-top:12px; font-size:13px; opacity:.85;">
-            Los teléfonos pueden presentar intermitencia. Estamos mejorando nuestros canales de atención.
-          </p>
-        </article>
-
-        <article class="card" style="--delay:.45s">
-          <h3>📍 Ubicación</h3>
-          <p>Papudo 655, La Ligua</p>
-          <div class="cta-row">
-            <a href="https://www.google.com/maps/search/?api=1&query=Papudo+655,+La+Ligua" target="_blank" rel="noopener">
-              Abrir en Google Maps
-            </a>
-          </div>
-        </article>
-
-        <article class="card" style="--delay:.70s">
-          <h3>📬 Formulario OIRS</h3>
-          <p>Si desea enviar una consulta, reclamo o sugerencia, hágalo a través del formulario oficial del Ministerio de Salud.</p>
-          <div class="cta-row">
-            <a href="https://oirs.minsal.cl/" target="_blank" rel="noopener">Ir al formulario OIRS</a>
-          </div>
-          <p style="margin-top:8px; font-size:12px; opacity:.7">Enlace oficial MINSAL: oirs.minsal.cl</p>
-        </article>
-
-      </div>
-
-      <!-- ===== BANNER PREMIUM ACTUALIZA DATOS + HORARIO ===== -->
-      <section class="update-banner-pro">
-        <div class="update-content">
-
-          <div class="update-text">
-
-            <div class="update-schedule">
-              <strong>Horario de atención CESFAM:</strong><br>
-              Lunes a jueves: 08:00 a 17:00 hrs<br>
-              Viernes: 08:00 a 16:00 hrs<br>
-              Extensión horaria: 17:00 a 20:00 hrs
-            </div>
-
-            <h2>ACTUALIZA<br>TUS DATOS</h2>
-
-            <p>
-              Si has cambiado de dirección o número de teléfono en los últimos seis meses,
-              te invitamos a actualizar tu información.
-            </p>
-
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSfIejCIpD09RXO5nBY-Vv1ENASJSfAWzRXdGwpItIHx4tECuA/viewform"
-               target="_blank"
-               class="update-btn">
-               ACTUALIZAR MIS DATOS →
-            </a>
-
-          </div>
-
-          <div class="update-image">
-            <img src="https://cdn-icons-png.flaticon.com/512/3095/3095583.png" alt="Megáfono">
-          </div>
-
-        </div>
-      </section>
-
-    </main>
-
-    <footer>
-      <p>CESFAM Raúl Sánchez Bañados – La Ligua</p>
-    </footer>
+    <div class="update-image">
+      <img src="https://cdn-icons-png.flaticon.com/512/3095/3095583.png" alt="Megáfono">
+    </div>
 
   </div>
+</section>
+
+<!-- ===== OIRS ===== -->
+<section class="oirs-banner">
+  <a href="https://oirs.minsal.cl/" target="_blank">
+    <img src="img/oirs-banner.png" alt="Trámite en Línea OIRS">
+  </a>
+</section>
+
+<!-- ===== PORTAL PACIENTE ===== -->
+<section class="portal-banner">
+  <a href="https://portalpaciente.minsal.cl/" target="_blank">
+    <img src="img/portal-paciente.png" alt="Portal Paciente MINSAL">
+  </a>
+</section>
+
+</main>
+
+<footer>
+  <p>CESFAM Raúl Sánchez Bañados – La Ligua</p>
+</footer>
+
+</div>
 </body>
 </html>
