--- a/index.html
+++ b/index.html
@@ -92,7 +92,29 @@
   @keyframes slideUp { to { transform:none; opacity:1; } }
   .logo-bar { display:flex; justify-content:center; gap:14px; opacity:.95; font-weight:700; }
   .logo-pill { background:rgba(255,255,255,.12); border:1px solid rgba(255,255,255,.25); padding:6px 10px; border-radius:999px; }
+<!-- ===== OIRS DESTACADO ===== -->
+<article class="card card-highlight" style="--delay:.80s">
+  <img src="img/oirs.png" alt="Trámite en Línea OIRS">
+  <div class="highlight-body">
+    <h3>📝 Trámite en Línea OIRS</h3>
+    <p>Envía consultas, reclamos o sugerencias a través del canal oficial del Ministerio de Salud.</p>
+    <div class="cta-row">
+      <a href="https://oirs.minsal.cl/" target="_blank" rel="noopener">Ir a OIRS</a>
+    </div>
+  </div>
+</article>
 
+<!-- ===== PORTAL PACIENTE DESTACADO ===== -->
+<article class="card card-highlight" style="--delay:.90s">
+  <img src="img/portal.png" alt="Portal Paciente MINSAL">
+  <div class="highlight-body">
+    <h3>👤 Portal Paciente</h3>
+    <p>Accede a información relevante de tu atención de salud a través del Portal Paciente.</p>
+    <div class="cta-row">
+      <a href="https://portalpaciente.minsal.cl/" target="_blank" rel="noopener">Ingresar al Portal</a>
+    </div>
+  </div>
+</article>
   /* ===== BANNER PREMIUM ACTUALIZA DATOS ===== */
   .update-banner-pro {
     margin: 40px 0 10px;
