--- a/index.html
+++ b/index.html
@@ -228,40 +228,40 @@ footer{
 <div class="card">
 <h3>☎️ Teléfonos</h3>
 <ul>
-<li>Sector Verde +56 9 6828 2933</li>
-<li>Sector Azul +56 9 6487 9380</li>
-<li>Sector Amarillo +56 9 3467665</li>
-<li>Sector Rojo +56 9 6488 0911</li>
-<li>OIRS +56 9 7024 805</li>
+<li>📞 <strong>Sector Verde:</strong> <a href="tel:+56968282933">+56 9 6828 2933</a></li>
+<li>📞 <strong>Sector Azul:</strong> <a href="tel:+56964879380">+56 9 6487 9380</a></li>
+<li>📞 <strong>Sector Amarillo:</strong> <a href="tel:+5693467665">+56 9 3467 665</a></li>
+<li>📞 <strong>Sector Rojo:</strong> <a href="tel:+56964880911">+56 9 6488 0911</a></li>
+<li>📞 <strong>OIRS:</strong> <a href="tel:+5697024805">+56 9 7024 805</a></li>
 </ul>
+<p style="font-size:13px;opacity:.8;margin-top:8px;">
+Los teléfonos pueden presentar intermitencia. Estamos mejorando nuestros canales de atención.
+</p>
 </div>
 
 <div class="card">
 <h3>📍 Ubicación</h3>
 <p>Papudo 655, La Ligua</p>
+<div class="cta-row">
+<a href="https://www.google.com/maps/search/?api=1&query=Papudo+655,+La+Ligua" target="_blank">Abrir en Google Maps</a>
+</div>
 </div>
 
-<!-- OIRS PREMIUM -->
 <div class="card-premium">
 <div class="card-content">
 <img src="img/oirs.png" alt="OIRS">
 <h3>Trámite en Línea OIRS</h3>
 <p>Envía consultas, reclamos o sugerencias a través del canal oficial.</p>
-<a href="https://oirs.minsal.cl/" target="_blank" class="btn-premium">
-Ir a OIRS
-</a>
+<a href="https://oirs.minsal.cl/" target="_blank" class="btn-premium">Ir a OIRS</a>
 </div>
 </div>
 
-<!-- PORTAL PREMIUM -->
 <div class="card-premium">
 <div class="card-content">
 <img src="img/portal.png" alt="Portal Paciente">
 <h3>Portal Paciente</h3>
 <p>Accede a información y servicios disponibles en línea.</p>
-<a href="https://portalpaciente.minsal.cl/" target="_blank" class="btn-premium">
-Ingresar al Portal
-</a>
+<a href="https://portalpaciente.minsal.cl/" target="_blank" class="btn-premium">Ingresar al Portal</a>
 </div>
 </div>
 
@@ -270,7 +270,7 @@ Ingresar al Portal
 <div class="update-banner">
 <div>
 <h2>ACTUALIZA TUS DATOS</h2>
-<p>Si cambiaste dirección o teléfono, actualiza tu información.</p>
+<p>Si cambiaste dirección o teléfono en los últimos seis meses, actualiza tu información.</p>
 </div>
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfIejCIpD09RXO5nBY-Vv1ENASJSfAWzRXdGwpItIHx4tECuA/viewform" target="_blank">
 Actualizar mis datos
