--- a/index.html
+++ b/index.html
@@ -234,17 +234,11 @@ footer{
 <li>📞 <strong>Sector Rojo:</strong> <a href="tel:+56964880911">+56 9 6488 0911</a></li>
 <li>📞 <strong>OIRS:</strong> <a href="tel:+5697024805">+56 9 7024 805</a></li>
 </ul>
-<p style="font-size:13px;opacity:.8;margin-top:8px;">
-Los teléfonos pueden presentar intermitencia. Estamos mejorando nuestros canales de atención.
-</p>
 </div>
 
 <div class="card">
 <h3>📍 Ubicación</h3>
 <p>Papudo 655, La Ligua</p>
-<div class="cta-row">
-<a href="https://www.google.com/maps/search/?api=1&query=Papudo+655,+La+Ligua" target="_blank">Abrir en Google Maps</a>
-</div>
 </div>
 
 <div class="card-premium">
@@ -270,7 +264,7 @@ Los teléfonos pueden presentar intermitencia. Estamos mejorando nuestros canale
 <div class="update-banner">
 <div>
 <h2>ACTUALIZA TUS DATOS</h2>
-<p>Si cambiaste dirección o teléfono en los últimos seis meses, actualiza tu información.</p>
+<p>Si cambiaste dirección o teléfono, actualiza tu información.</p>
 </div>
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfIejCIpD09RXO5nBY-Vv1ENASJSfAWzRXdGwpItIHx4tECuA/viewform" target="_blank">
 Actualizar mis datos
