--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
             <li>📞 <strong>Sector Verde:</strong> <a href="tel:+56968282933">+56 9 6828 2933</a></li>
             <li>📞 <strong>Sector Azul:</strong> <a href="tel:+56964879380">+56 9 6487 9380</a></li>
             <!-- OJO: Sector Amarillo tiene 7 dígitos en tu original; aquí lo dejo como texto hasta confirmar -->
-            <li>📞 <strong>Sector Amarillo:</strong> +56 9 XXX XXXX XX</li>
+            <li>📞 <strong>Sector Amarillo:</strong> +56 9 3467665</li>
             <li>📞 <strong>Sector Rojo:</strong> <a href="tel:+56964880911">+56 9 6488 0911</a></li>
             <li>📞 <strong>OIRS:</strong> <a href="tel:+5697024805">+56 9 7024 805</a></li>
           </ul>
