--- a/index.html
+++ b/index.html
@@ -314,24 +314,20 @@
           <ul>
             <li>📞 <strong>Sector Verde:</strong> <a href="tel:+56968282933">+56 9 6828 2933</a></li>
             <li>📞 <strong>Sector Azul:</strong> <a href="tel:+56964879380">+56 9 6487 9380</a></li>
-            <!-- OJO: Sector Amarillo tiene 7 dígitos en tu original; aquí lo dejo como texto hasta confirmar -->
-            <li>📞 <strong>Sector Amarillo:</strong> +56 9 3467665</li>
+            <li>📞 <strong>Sector Amarillo:</strong> <a href="tel:+5693467665">+56 9 3467 665</a></li>
             <li>📞 <strong>Sector Rojo:</strong> <a href="tel:+56964880911">+56 9 6488 0911</a></li>
             <li>📞 <strong>OIRS:</strong> <a href="tel:+5697024805">+56 9 7024 805</a></li>
           </ul>
 
           <p style="margin-top:8px"><em>Puede comunicarse con su sector para obtener información o realizar consultas.</em></p>
 
-          <div class="card">
-<h3>☎️ Teléfonos</h3>
-<ul>
-<li>📞 <strong>Sector Verde:</strong> <a href="tel:+56968282933">+56 9 6828 2933</a></li>
-<li>📞 <strong>Sector Azul:</strong> <a href="tel:+56964879380">+56 9 6487 9380</a></li>
-<li>📞 <strong>Sector Amarillo:</strong> <a href="tel:+5693467665">+56 9 3467 665</a></li>
-<li>📞 <strong>Sector Rojo:</strong> <a href="tel:+56964880911">+56 9 6488 0911</a></li>
-<li>📞 <strong>OIRS:</strong> <a href="tel:+5697024805">+56 9 7024 805</a></li>
-</ul>
-</div>
+          <div class="cta-row">
+            <a href="tel:+56968282933">Llamar Sector Verde</a>
+            <a href="tel:+56964879380">Llamar Sector Azul</a>
+            <a href="tel:+5693467665">Llamar Sector Amarillo</a>
+            <a href="tel:+56964880911">Llamar Sector Rojo</a>
+            <a href="tel:+5697024805">Llamar OIRS</a>
+          </div>
 
           <p style="margin-top:12px; font-size:13px; opacity:.85;">
             Los teléfonos pueden presentar intermitencia. Estamos mejorando nuestros canales de atención.
